--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,7 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme"
-      parent="Theme.AppCompat">
+  <style name="AppTheme" parent="Theme.AppCompat">
       <item name="colorPrimary">@color/material_blue_500</item>
       <item name="colorPrimaryDark">@color/material_blue_700</item>
     <!-- Customize your theme here. -->
@@ -16,9 +15,19 @@
   <style name="BidPriceTextStyle">
     <item name="android:textSize">20sp</item>
   </style>
+  <style name="BidPriceTextStyle.Inverse">
+    <item name="android:textColor">#000</item>
+  </style>
+  <style name="NoDataTextStyle">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textColor">@color/material_red_700</item>
+  </style>
   <style name="StockSymbolTextStyle">
     <item name="android:textSize">25sp</item>
     <item name="android:textAllCaps">true</item>
+  </style>
+  <style name="StockSymbolTextStyle.Inverse">
+    <item name="android:textColor">#000</item>
   </style>
 
 </resources>
