--- a/app/src/main/res/layout/activity_stock_detail.xml
+++ b/app/src/main/res/layout/activity_stock_detail.xml
@@ -26,7 +26,8 @@
             android:id="@+id/linechart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_margin="@dimen/activity_vertical_margin"/>
+            android:layout_margin="@dimen/activity_vertical_margin"
+            />
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
