--- a/app/src/main/res/layout/activity_stock_detail.xml
+++ b/app/src/main/res/layout/activity_stock_detail.xml
@@ -1,33 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.sam_chordas.android.stockhawk.ui.StockDetailActivity">
-    <android.support.v7.widget.CardView
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/cardview_dark_background">
-        <include layout="@layout/list_item_quote" />
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:cardBackgroundColor="@color/cardview_dark_background">
-        <com.db.chart.view.LineChartView
-            android:id="@+id/linechart"
+        android:padding="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="com.sam_chordas.android.stockhawk.ui.StockDetailActivity">
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_margin="@dimen/activity_vertical_margin"
-            />
-    </android.support.v7.widget.CardView>
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/cardview_dark_background">
+            <include layout="@layout/list_item_quote" />
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            app:cardBackgroundColor="@color/cardview_dark_background">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_vertical_margin">
+                <TextView
+                    android:id="@+id/stock_symbol"
+                    style="@style/BidPriceTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="@string/chart_title"
+                    />
+                <com.db.chart.view.LineChartView
+                    android:id="@+id/linechart"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    />
+            </LinearLayout>
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+</ScrollView>
+
